# VESC-Adventures

./: README.md  ROS1_version.md  Sinusoidal.py  VESC_intro.py  VESCky.py  Variable_RPM.py  cppaproach.cpp  start_vesc_driver.sh
400run/: 400RPM_ROS2_Ver.py  VESC_400RPM_10s.py
mod_vdd/: CMakeLists.txt  package.xml
scripts/: start_vesc_driver.sh
